@@ -569,6 +569,7 @@ int main(int argc, char **argv)
 		suggest_hpet();
 		suggest_ac97_powersave();
 		suggest_wireless_powersave();
+		suggest_ondemand_governer();
 
 
 		pick_suggestion();
