@@ -15,6 +15,7 @@
 	  tune it right away.
 	* Add active suggestion to enable AC97 powersave mode at runtime
 	* Add active suggestion to enable wireless powersave mode at runtime
+	* Add active suggestion to enable ondemand
 
 
 1.3 -- May 21st, 2007
